{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 42,
  "lineage": "f3440d10-8b52-0422-cd44-9845ec925862",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00bab898728648dab",
            "arn": "arn:aws:ec2:eu-west-2:956723945353:instance/i-000094785b8a2b2ea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-docker-profile",
            "id": "i-000094785b8a2b2ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fac51bde9c204b46"
              }
            ],
            "primary_network_interface_id": "eni-0fac51bde9c204b46",
            "private_dns": "ip-10-0-1-207.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "public_ip": "18.171.207.107",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0494d117831135d6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065781ec9403f4af3",
            "tags": {
              "Name": "flask-app"
            },
            "tags_all": {
              "Name": "flask-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd05bbfdee107f50"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "i-000094785b8a2b2ea",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2",
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls",
            "aws_subnet.public-sub",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:internet-gateway/igw-03a69d98154ceb1fc",
            "id": "igw-03a69d98154ceb1fc",
            "owner_id": "956723945353",
            "region": "eu-west-2",
            "tags": {
              "Name": "main-public-sub"
            },
            "tags_all": {
              "Name": "main-public-sub"
            },
            "vpc_id": "vpc-036274a74f1fc97b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:route-table/rtb-071f050228e2a44c5",
            "id": "rtb-071f050228e2a44c5",
            "owner_id": "956723945353",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a69d98154ceb1fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-036274a74f1fc97b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "rtb-071f050228e2a44c5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1920f7a14274e52",
            "region": "eu-west-2",
            "route_table_id": "rtb-071f050228e2a44c5",
            "subnet_id": "subnet-065781ec9403f4af3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:security-group/sg-0dd05bbfdee107f50",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0dd05bbfdee107f50",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "956723945353",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-036274a74f1fc97b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "sg-0dd05bbfdee107f50",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:subnet/subnet-065781ec9403f4af3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065781ec9403f4af3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956723945353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-sub"
            },
            "tags_all": {
              "Name": "public-sub"
            },
            "vpc_id": "vpc-036274a74f1fc97b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "subnet-065781ec9403f4af3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:vpc/vpc-036274a74f1fc97b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfbe7fd0d4f32b63",
            "default_route_table_id": "rtb-0e47bfcd30f1f9ce2",
            "default_security_group_id": "sg-0c13871a32fbef04b",
            "dhcp_options_id": "dopt-03be6fa8cd43da82c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036274a74f1fc97b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e47bfcd30f1f9ce2",
            "owner_id": "956723945353",
            "region": "eu-west-2",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "vpc-036274a74f1fc97b0",
            "region": "eu-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:security-group-rule/sgr-0fc5eb5b058dc27d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fc5eb5b058dc27d2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0dd05bbfdee107f50",
            "security_group_rule_id": "sgr-0fc5eb5b058dc27d2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "sgr-0fc5eb5b058dc27d2",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:956723945353:security-group-rule/sgr-0b920bf29d7c06e31",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b920bf29d7c06e31",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0dd05bbfdee107f50",
            "security_group_rule_id": "sgr-0b920bf29d7c06e31",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "956723945353",
            "id": "sgr-0b920bf29d7c06e31",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}